[package]
name = "pngquant-interactive"
version = "0.1.0"
license = "GPL-3.0"
categories = ["graphics"]
description = "Graphical interface for pngquant with a live preview"
repository = "https://github.com/AndrewKvalheim/pngquant-interactive"
authors = ["Andrew Kvalheim <andrew@kvalhe.im>"]
edition = "2021"

[dependencies]
anyhow = "^1.0"
clap = { version = "^4.1", features = ["derive"] }
fltk = "^1.3"
fltk-theme = "^0.7"
imagequant = "^4.0"
png = "^0.17"
rgb = "0.8"
